k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photojugaad-backend-service
spec:
  type: NodePort
  selector:
    app: photojugaad-backend
  ports:
    - port: 8080        # Service port
      targetPort: 8080 # Container port
      nodePort: 30080  # Exposed on your machine
