k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photojugaad-ingress
spec:
  rules:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photojugaad-frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: photojugaad-backend-service
                port:
                  number: 8080
